changes final of web frontend

--- a/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/auth/login/login.component.html
+++ b/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/auth/login/login.component.html
@@ -7,7 +7,8 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="formLogin">
   <div class="form-group">
     <label for="exampleInputEmail1">Email</label>
-    <input type="email" class="form-control" [ngClass]="{'is-invalid': !formLogin.get('email').valid && formLogin.get('email').touched}" formControlName="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+    <input type="email" class="form-control" [ngClass]="{'is-invalid': !formLogin.get('email').valid && formLogin.get('email').touched}"
+      formControlName="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
     <div class="invalid-feedback">
       Ponga un e-mail valido
     </div>
@@ -15,6 +16,24 @@
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" formControlName="password" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div #myModal class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          {{ mensaje }}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <button type="submit" class="btn btn-primary btn-large btn-block">Login</button>
