--- a/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/admin/employee/employee-create/employee-create.component.html
+++ b/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/admin/employee/employee-create/employee-create.component.html
@@ -58,7 +58,8 @@
             <div class="form-group col-md-6">
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <button type="submit" class="btn btn-primary btn-block">Guardar</button>
+                  <button type="submit" [disabled]="loadingSave" class="btn btn-primary btn-block">
+                    <i class="fa fa-spinner fa-spin" *ngIf="loadingSave" aria-hidden="true"></i> Guardar</button>
                 </div>
                 <div class="form-group col-md-6">
                   <button type="button" class="btn btn-danger btn-block" (click)="onCancelar()">Cancelar</button>
