--- a/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/admin/employee/employee-detail/employee-detail.component.html
+++ b/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/admin/employee/employee-detail/employee-detail.component.html
@@ -11,7 +11,7 @@
     <div id="collapse{{index}}" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body my-container">
 
-        <form [formGroup]="formDetail">
+        <form [formGroup]="formDetail" (ngSubmit)="onSubmit()">
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputFirstName">Nombres</label>
@@ -53,7 +53,8 @@
             <div class="form-group col-md-6">
               <div class="form-row" *ngIf="editMode">
                 <div class="form-group col-md-6">
-                  <button type="submit" class="btn btn-success btn-block">Guardar</button>
+                  <button type="submit" [disabled]="loadingSave" class="btn btn-success btn-block">
+                    <i class="fa fa-spinner fa-spin" *ngIf="loadingSave" aria-hidden="true"></i> Guardar</button>
                 </div>
                 <div class="form-group col-md-6">
                   <button type="button" class="btn btn-danger btn-block" (click)="onCancelar()">Cancelar</button>
@@ -62,6 +63,25 @@
               <div class="form-row" *ngIf="!editMode">
                 <div class="form-group col-md-12">
                   <button type="button" class="btn btn-primary btn-block" (click)="onEditMode()">Editar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div #modalError class="modal fade" id="exampleModal6{{index}}" tabindex="-1" role="dialog" aria-labelledby="exampleModal6Label"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModal6Label">Error</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  {{ errorModal }}
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
