--- a/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/admin/service/service.component.html
+++ b/desarrollo/SGC/4. Programacion/Web/Frontend/src/app/admin/service/service.component.html
@@ -2,4 +2,7 @@
   <div class="content">
     <h1 align="center">Mantenimiento de Servicios</h1>
   </div>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
